--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ The 13th season of Top Chef premiered on December 2–3, 2015, and concluded on 
     <h3> Season 2 </h3>
     <p> Top Chef: Los Angeles is the second season of the American reality television series Top Chef. It was first filmed in Los Angeles, before concluding in Waikoloa Village, Hawaii. The season premiered on October 18, 2006 and ended on January 31, 2007. Padma Lakshmi replaced Katie Lee Joel as the host, with Tom Colicchio and Gail Simmons returning as judges. The winning recipe from each week's episode was featured on Bravo's Top Chef website and prepared by Season 1 contestant Lee Anne Wong in a web video called The Wong Way to Cook. Bravo cited negative viewer reaction to the Season 2 chefs' attitudes and over-all behavior as the reason why no reunion episode was filmed.
     </p>
-    <h4> Season 3 </h4>
+    <h4> Season 3
+    <font-size: 30>
+  </h4>
     <p>Top Chef: Miami is the third season of the American reality television series Top Chef. It was first filmed in Miami, Florida, before concluding in Aspen, Colorado. The season premiered on June 13, 2007 and ended on October 10, 2007. Padma Lakshmi returned with Tom Colicchio, Gail Simmons, and new judge Ted Allen, who switched off with Simmons throughout the season. Top Chef: San Francisco contestant Lee Anne Wong was brought in as a food consultant and assisted in planning the challenges. Production took place in April and May 2007 in Miami Beach, Florida, with production activity centered at the historic Fontainebleau Hotel. The winning recipe from each week's episode of Season 3 was featured on Bravo's Top Chef website and prepared by Lee Anne Wong in a web series called The Wong Way to Cook.
     </p>
   </hr>
