--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   </head>
   <body>
+
     <h1> Top Chef Seasons 1-3</h1>
+
+
     <p>Top Chef is an American reality competition television series which premiered on March 8, 2006, on Bravo. The show features chefs competing against each other in various culinary challenges. They are judged by a panel of professional chefs and other notables from the food and wine industry with one or more contestants eliminated in each episode. The show is produced by Magical Elves Productions, the same company that created Project Runway.
 The show has spawned multiple spinoff series, including Top Chef Masters, featuring established award-winning chefs; and Top Chef: Just Desserts, featuring pastry chefs. Another show, Top Chef Junior, featuring contestants in their early teens, was scheduled for a 2008 debut but never aired. Numerous international adaptations of Top Chef have also been produced.
 The 13th season of Top Chef premiered on December 2–3, 2015, and concluded on March 17, 2016. On February 1, 2016, it was announced that the series had been renewed for a 14th season, which will take place in Charleston, South Carolina.
@@ -19,16 +22,17 @@ The 13th season of Top Chef premiered on December 2–3, 2015, and concluded on 
     <p> Top Chef: Los Angeles is the second season of the American reality television series Top Chef. It was first filmed in Los Angeles, before concluding in Waikoloa Village, Hawaii. The season premiered on October 18, 2006 and ended on January 31, 2007. Padma Lakshmi replaced Katie Lee Joel as the host, with Tom Colicchio and Gail Simmons returning as judges. The winning recipe from each week's episode was featured on Bravo's Top Chef website and prepared by Season 1 contestant Lee Anne Wong in a web video called The Wong Way to Cook. Bravo cited negative viewer reaction to the Season 2 chefs' attitudes and over-all behavior as the reason why no reunion episode was filmed.
     </p>
     <h4> Season 3
-    <font-size: 30>
   </h4>
     <p>Top Chef: Miami is the third season of the American reality television series Top Chef. It was first filmed in Miami, Florida, before concluding in Aspen, Colorado. The season premiered on June 13, 2007 and ended on October 10, 2007. Padma Lakshmi returned with Tom Colicchio, Gail Simmons, and new judge Ted Allen, who switched off with Simmons throughout the season. Top Chef: San Francisco contestant Lee Anne Wong was brought in as a food consultant and assisted in planning the challenges. Production took place in April and May 2007 in Miami Beach, Florida, with production activity centered at the historic Fontainebleau Hotel. The winning recipe from each week's episode of Season 3 was featured on Bravo's Top Chef website and prepared by Lee Anne Wong in a web series called The Wong Way to Cook.
+<font-size: 45>
     </p>
   </hr>
 <ul id= "chef-links" class ="nav-links">
-  <li class="nav-link"><a href="https://en.wikipedia.org/wiki/Top_Chef_(season_1)"> Top Chef Season 1</a></li>
-<li class="nav-link"><a href="https://en.wikipedia.org/wiki/Top_Chef_(season_2)"> Top Chef Season 2</a></li>
-<li class="nav-link"><a href="https://en.wikipedia.org/wiki/Top_Chef_(season_3)">Top Chef Season 3</a></li>
+  <li style="color:white; "class="nav-link"><a href="https://en.wikipedia.org/wiki/Top_Chef_(season_1)"> Top Chef Season 1</a></li>
+<li style="color:white;" class="nav-link"><a href="https://en.wikipedia.org/wiki/Top_Chef_(season_2)"> Top Chef Season 2</a></li>
+<li style="color:white;" class="nav-link"><a href="https://en.wikipedia.org/wiki/Top_Chef_(season_3)">Top Chef Season 3</a></li>
   </ul>
-
+<img src="http://i.giphy.com/t7916DnhDUIXS.gif">
   </body>
+
 </html>
